--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,21 @@
 [tool.poetry]
-name = "fetch-price"
+name = "hledger_helper"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Various helper scripts for hledger plaintext accounting"
+authors = ["Paul Wang"]
+license = "MIT"
 readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
+# `poetry install`
+# `poetry add`
+# `poetry remove`
+# `poetry env use 3.12`
 python = "^3.11"
+ruff = "^0.3.5"
+pre-commit = "^3.7.0"
 yfinance = "^0.2.40"
-ruff = "^0.5.1"
 
 
 [build-system]
