--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "hledger_helper"
 version = "0.1.0"
-description = "Various helper scripts for hledger plaintext accounting"
+description = "A Collection of Helpers for Hledger Plaintext Accounting"
 authors = ["Paul Wang"]
 license = "MIT"
 readme = "README.md"
@@ -11,12 +11,18 @@ readme = "README.md"
 # `poetry add`
 # `poetry remove`
 # `poetry env use 3.12`
+# `peotry install --all-extras`
 python = "^3.11"
-ruff = "^0.5.0"
-pre-commit = "^3.7.0"
 yfinance = "^0.2.40"
 blessed = "^1.20.0"
+ruff = {version = "^0.5.0", optional = true}
+pre-commit = {version = "^3.7.0", optional = true}
 
+[tool.poetry.extras]
+dev = ["ruff", "pre-commit"]
+
+[tool.poetry.scripts]
+hh = "hledger_helper.__main__:main"
 
 [build-system]
 requires = ["poetry-core"]
