Add generating recurring transaction feature
- Add a menu option and corresponding implementation
  for generating recurring transaction
- Refactor "Press Any Key to Continue" interaction into function

--- a/src/hledger_helper/config/config.toml
+++ b/src/hledger_helper/config/config.toml
@@ -5,6 +5,7 @@ directory = "~/finance/"
 ledger_file = "my.ledger"
 header_file = "my.ledger.header"
 price_file = "fetched_prices.txt"
+recurring_tx_file = "recur_tx.journal"
 
 [commodities]
 
