--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ readme = "README.md"
 authors = [
     { name = "plwg", email = "56353330+plwg@users.noreply.github.com" }
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 dependencies = [
     "blessed>=1.20.0",
+    "toml>=0.10.2",
     "yfinance>=0.2.54",
 ]
 
